--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             href="https://drive.google.com/drive/u/0/folders/10VJqU16o_ChhJyoA2sWo8GsGlKjaJHV4"
             target="_blank"
             class="btn"
-            >Kertas Kerja</a
+            >Kertas Kerja Rapat Gabungan</a
           >
         </div>
       </div>
