--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="navbar-inner">
         <div class="logo-group">
           <img src="dntara.png" alt="Logo Andantara" class="logo" />
-          <img src="logo-rpn.png" alt="Logo RPN" class="logo" />
+          <img src="Logo-rpn.png" alt="Logo RPN" class="logo" />
           <img src="ptpn.png" alt="Logo PTPN" class="logo" />
         </div>
         <span class="nav-title">Perencanaan Strategis RPN</span>
