--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="section-text right">
-          <h2>PT RPN</h2>
+          <h2>DIVISI PERENCANAAN STRATEGIS</h2>
           <p>
             Divisi Perencanaan Strategis PT RPN bertugas menyusun arah kebijakan
             perusahaan melalui strategi jangka pendek, menengah, dan panjang.
