--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="section-text right">
-          <h2>DIVISI PERENCANAAN STRATEGIS</h2>
+          <h2>Divisi Perencanaan Strategis</h2>
           <p>
             Divisi Perencanaan Strategis PT RPN bertugas menyusun arah kebijakan
             perusahaan melalui strategi jangka pendek, menengah, dan panjang.
@@ -93,7 +93,7 @@
             href="https://drive.google.com/drive/u/0/folders/10VJqU16o_ChhJyoA2sWo8GsGlKjaJHV4"
             target="_blank"
             class="btn"
-            >Kertas Kerja Rapat Gabungan</a
+            >Kertas Kerja</a
           >
         </div>
       </div>
